# privateboost

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.rust  IDEAS.md  LICENSE  Makefile  README.md  docker-compose.rust.yml  docker-compose.yml  pyproject.toml
docs/: design.md  design.typ  improvements.md
docs/figures/: architecture.mmd
docs/plans/: 2026-01-12-privateboost-design.md  2026-01-12-shamir-commitments-design.md  2026-01-18-paper-design.md  2026-01-29-grpc-interface-design.md  2026-02-26-docker-simulation-design.md  2026-02-26-grpc-implementation-design.md  2026-02-26-grpc-implementation-plan.md  2026-02-27-multi-aggregator-design.md  2026-02-27-multi-aggregator-plan.md  2026-02-27-rust-grpc-design.md  2026-02-27-rust-grpc-implementation-plan.md
notebooks/: 03_split_comparison.ipynb  generate_figures.ipynb  privateboost_demo.ipynb
paper/: arxiv.sty  export.js  generate_figures.py  main.tex  main.typ  package-lock.json  package.json  references.bib  references_fixed.bib
paper/.auctex-auto/: main.el
paper/figures/: README.md  accuracy_results.csv  dropout_results.csv  explore_binning.py  generate_binning_comparison.py  generate_gain_retention.py
paper/figures/src/: architecture.html
proto/: privateboost.proto
rust/: Cargo.toml  build.rs
rust/examples/: heart-disease.yaml
rust/privateboost/: Cargo.toml
rust/privateboost/src/: csv_io.rs  lib.rs
rust/privateboost/src/crypto/: commitment.rs  encoding.rs  field.rs  mod.rs  shamir.rs
rust/privateboost/src/model/: mod.rs  tree.rs
rust/privateboost/src/protocol/: aggregator.rs  client.rs  messages.rs  mod.rs  shareholder.rs
rust/privateboost/tests/: test_crypto.rs  test_integration.rs
rust/privateboost/tests/data/: heart_disease.csv
rust/scripts/: start-local.sh  stop-local.sh
rust/src/: lib.rs
rust/src/coordinator/: grpc_service.rs  service.rs
rust/src/crypto/: commitment.rs  fixed_point.rs  mod.rs  shamir.rs
rust/src/domain/: aggregator.rs  mod.rs  model.rs  shareholder.rs
rust/src/grpc/: aggregator_service.rs  mod.rs  remote_shareholder.rs  shareholder_service.rs
scripts/: generate_threshold_plot.py
src/privateboost/: __init__.py  aggregator.py  client.py  messages.py  shareholder.py  tree.py
src/privateboost/crypto/: __init__.py  commitment.py  shamir.py
src/privateboost/grpc/: __init__.py  __main__.py  aggregator_server.py  converters.py  network_client.py  privateboost_pb2.py  privateboost_pb2.pyi  privateboost_pb2_grpc.py  serve.py  shareholder_server.py  simulate.py
tests/: test_crypto.py  test_grpc_aggregator.py  test_grpc_converters.py  test_grpc_integration.py  test_grpc_network_client.py  test_grpc_shareholder.py  test_integration.py
