[project]
name = "privateboost"
version = "0.1.0"
description = "Privacy-preserving federated XGBoost via secret sharing"
readme = "README.md"
authors = [
    { name = "Bernhard Specht", email = "bernhard@specht.net" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pandas-stubs~=2.3.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "protobuf>=5.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "ruff>=0.8.0",
    "reffix>=0.1.0",
]

[tool.ruff]
exclude = ["src/privateboost/grpc/privateboost_pb2*"]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
