[project]
name = "privateboost"
version = "0.1.0"
description = "Privacy-preserving federated XGBoost via Shamir secret sharing"
readme = "README.md"
authors = [
    { name = "Bernhard Specht", email = "bernhard@specht.net" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "matplotlib>=3.8.0",
    "ruff>=0.8.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
]
