[package]
name = "privateboost"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shareholder"
path = "src/bin/shareholder.rs"

[[bin]]
name = "aggregator"
path = "src/bin/aggregator.rs"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
rand = "0.9"
curve25519-dalek = { version = "4", features = ["rand_core"] }
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = "0.12"
csv = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "pbctl"
path = "src/bin/pbctl.rs"

[build-dependencies]
tonic-build = "0.13"
